2009-08-04

	* sylpheed.spec.in: fixed %files section.

2009-08-04

	* libsylph/mbox.c
	  src/progressdialog.[ch]
	  src/import.c: show progressbar on mbox import.

2009-07-21

	* version 2.7.0

2009-07-01

	* PLUGIN.txt
	  PLUGIN.ja.txt: added plugin document.

2009-07-01

	* plugin/test/Makefile.am: fixed build issue.

2009-06-25

	* updated COPYING and LICENSE.

2009-06-25

	* manual/ja/sylpheed.sgml: updated bsfilter description.

2009-06-17

	* src/plugin.[ch]
	  src/main.c
	  src/libsylpheed-plugin-0.def: made syl_plugin_lookup_symbol()
	  public. Added syl_plugin_main_window_get_statusbar().

2009-06-12

	* plugin/test/Makefile.am: do not install automatically (added make
	  install-plugin target).

2009-06-12

	* manual/ja/sylpheed.sgml: updated for 2.7.

2009-06-10

	* merged plugin-test branch into trunk.

2009-06-08

	* libsylph/procmsg.c
	  libsylph/procheader.c: made perror() more descriptive.

2009-06-03

	* src/plugin.[ch]
	  src/main.c: syl_plugin_manage_window_get_focus_window(): added.

2009-05-28

	* src/folderview.c: folderview_new_folder_cb(): win32: don't allow
	  filesystem-unsafe characters.

2009-05-27

	* configure.in
	  src/update_check.c: added config.h macro DEVEL_VERSION.

2009-05-27

	* src/update_check.c: disable auto update check if specified.
	  don't show check button on manual checking.

2009-05-26

	* src/defs.h
	  src/update_check.c: moved VERSION_URI in defs.h.

2009-05-22

	* libsylph/prefs_common.[ch]
	  src/update_check.[ch]
	  src/main.c
	  src/prefs_common_dialog.c
	  src/mainwindow.c: implemented update check (using curl).
	* src/plugin_manager.c: show grid lines.

2009-05-18

	* src/plugin.h: added padding into SylPluginInfo.
	* src/about.c: updated copyright year.
	* configure.in: updated version to 2.7.0beta1.

2009-05-15

	* libsylph/procmsg.c: made error message more descriptive on fopen().

2009-05-15

	* src/plugin.h
	  src/plugin_manager.c: added description to SylPluginInfo.

2009-05-14

	* src/plugin_manager.c