@@ -1,3 +1,7 @@
+2009-08-05
+
+	* src/import.c: modified progressbar dialog.
+
 2009-08-04
 
 	* sylpheed.spec.in: fixed %files section.
